- filter by genre functionality added - movies onClicks handled navigating to details screen -now user can save his favorite movies locally and show them

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="overview">OverView</string>
+    <string name="search">search</string>
+    <string name="movies">Movies</string>
+    <string name="favorites">Favorites</string>
 </resources>
